--- a/DSLTransManual/faq.tex
+++ b/DSLTransManual/faq.tex
@@ -1,4 +1,4 @@
-﻿\section{FAQ}
+﻿\section{FAQ and Common Installation Problems}
 \label{sec:faq}
 
 \begin{comment} 
@@ -23,4 +23,13 @@ Erro de inicializacao de prolog e isso
 
 \end{comment}
 
-% 
+\subsection{SWI-Prolog: [FATAL Error: Could not find system resources]}
+
+This error occurs when you one (or more) of the following steps in the section \ref{sec:installation}:
+\begin{itemize}
+\item Install swi prolog.
+\item Add the bin directory of prolog to the \emph{Path} variable.
+\item Set the \emph{SWI\_HOME\_DIR} system variable.
+\item Copy the jpl.jar file to the appropriate destination.
+\end{itemize}
+
