--- a/DSLTransManual/introduction.tex
+++ b/DSLTransManual/introduction.tex
@@ -384,8 +384,8 @@ This manual is divided in five sections:
   teaching you how to use (and build) higher order transformations and to build
   complex transformation to simulate the stepping of abstract machines and even
   how to create transformations that are specific to some domain.
-  \item[FAQ] Frequently asked questions and common errors are
-  answered here.
+  \item[FAQ and Common Installation Problems] Frequently asked questions and common installation errors are
+  described here.
 \end{description}
 
 \clearpage
