--- a/DSLTransManual/versions.tex
+++ b/DSLTransManual/versions.tex
@@ -3,5 +3,6 @@
 % Deve conter informacoes de versao do documento, com as datas, etc...
 
 \begin{description}
-\item[18\supernd August 2011] Initial version.
+\item[August 2011] Initial version.
+\item[December 2014] Updated installation instructions to the Eclipse Luna distribution.
 \end{description}
