updated manual and readme

--- a/DSLTransManual/advanced_topics.tex
+++ b/DSLTransManual/advanced_topics.tex
@@ -188,10 +188,11 @@ Apart from the automaton behaviour simulation using \emph{DSLTrans}, the main id
 
 
 
-
 \clearpage
 \subsection{Turing Machine Step Transformation}
 \label{subsec:turing_machine_trans}
+
+To be completed.
 
 % Seccao deve ser introduzida explicando que o facto de uma transformacao
 % dsltrans ser metamodelada tem vantagens tais como a criacao de higher order
@@ -202,6 +203,8 @@ Apart from the automaton behaviour simulation using \emph{DSLTrans}, the main id
 \clearpage
 \subsection{High Order Transformations}
 
+To be completed.
+
 % Seccao da um exemplo de construccao de uma higher order transformation (muito
 % muito simples)
 
@@ -209,9 +212,15 @@ Apart from the automaton behaviour simulation using \emph{DSLTrans}, the main id
 \clearpage
 \subsection{Prototyping Transformations}
 
+To be completed.
+
 \clearpage
 \subsubsection{Identity Generation}
 
+To be completed.
+
 \clearpage
 \subsubsection{Fixed Identity Generation}
+
+To be completed.
 
