--- a/DSLTransManual/installation.tex
+++ b/DSLTransManual/installation.tex
@@ -1,7 +1,7 @@
 ﻿\section{Installation}
 \label{sec:installation}
 
-\subsection{Windows7 \& Vista}
+\subsection{Windows}
 
 In order to successfully follow the examples in this manual and use
 \emph{DSLTrans} you have to follow (carefully) these steps:
@@ -38,7 +38,7 @@ variable.
 
 \begin{figure}[h]
 \begin{center}
-  \includegraphics[width=0.6\linewidth]{imgs/swi_prolog_path.png}
+  \includegraphics[width=0.6\textwidth]{imgs/swi_prolog_path.png}
   \caption{Path to add to the \emph{system} \emph{SWI\_HOME\_DIR} variable.}
   \label{fig:swi_pl_path}
 \end{center}
