--- a/DSLTransManual/introduction.tex
+++ b/DSLTransManual/introduction.tex
@@ -271,11 +271,11 @@ In order to succeed in learning DSLTrans and following the examples presented in
 this manual it is highly recommended that you have the following tools:
 
 \begin{itemize}
-  \item Eclipse Modeling Tools, Helios Service Release 2. You should be able to
+  \item Eclipse Modeling Tools, Luna Service Release 1. You should be able to
   download it in the eclipse home page \url{http://www.eclipse.org}. After
   starting eclipse and going to \emph{Help, About Eclipse}, you should see the
   version info shown in figure \ref{fig:rec_eclipse_version}.
-  \item SWI-Prolog version 5.10.4 by Jan Wielemaker. The \emph{DSLTranslator}
+  \item SWI-Prolog version 5.10.2 by Jan Wielemaker. The \emph{DSLTranslator}
   engine uses the Prolog language internally to process the transformations. You should
   be able to download SWIProlog from the project's home page
   \url{http://www.swi-prolog.org/}. Figure \ref{fig:rec_prolog_version} shows
@@ -285,7 +285,7 @@ this manual it is highly recommended that you have the following tools:
 
 \begin{figure}[H]
 \begin{center}
-  \includegraphics[width=0.9\textwidth]{imgs/eclipse_version.jpg}
+  \includegraphics[width=0.9\textwidth]{imgs/eclipse_version.png}
   \caption{Recomended eclipse version.}
   \label{fig:rec_eclipse_version}
 \end{center}
@@ -293,38 +293,12 @@ this manual it is highly recommended that you have the following tools:
 
 \begin{figure}[H]
 \begin{center}
-  \includegraphics[width=0.9\textwidth]{imgs/prolog_version.jpg}
+  \includegraphics[width=0.9\textwidth]{imgs/prolog_version.png}
   \caption{Recomended prolog version.}
   \label{fig:rec_prolog_version}
 \end{center}
 \end{figure}
 
-
-\begin{comment} 
-
-Eclipse:
-	Eclipse version: Eclipse Modeling Tools Helios Release
-	
-	Plugins:
-		dsltransAnalysis_1.0.0.201107201833.jar
-		DSLTransEditor.diagram_1.0.0.201008111406.jar
-		DSLTransEditor.editor_1.0.0.jar
-		DSLTransEditor.edit_1.0.0.jar
-		DSLTransEditor_1.0.0.jar
-		DSLTranslator_1.0.2.jar
-		mprolog_1.0.0.201107201759.jar
-		text_1.0.0.jar
-		Transformer2.0_1.0.2.jar
-
-WINDOWS:
-	SWI Prolog version 5.10.x
-	
-		
-LINUX:
-
-			
-
-\end{comment}
 
 \clearpage
 
