--- a/DSLTransManual/installation.tex
+++ b/DSLTransManual/installation.tex
@@ -6,7 +6,8 @@
 In order to successfully follow the examples in this manual and use
 \emph{DSLTrans} you have to follow (carefully) these steps:
 
-Download and install SWI-Prolog version 5.10.2. You will find it along the DSLTrans release files.
+Download and install SWI-Prolog version 5.10.2. You will find it inside the \emph{DSLTrans-Release} folder in our repository:
+\url{https://github.com/githubbrunob/DSLTransGIT}
 
 Download and extract Eclipse Modeling Tools, Luna Service Release 1.
 
@@ -60,17 +61,8 @@ directory, and paste it in Java's lib directory:
 \end{center}
 \end{figure}
 
-Finally, you need to install the DSLTrans plugins, placing them in the
-eclipse plugins directory (e.g., \verb=C:\Users\clagms\Desktop\eclipse\plugins=)
-
-
-\begin{figure}[h]
-\begin{center}
-  \includegraphics[width=\textwidth]{imgs/dsltrans_plugins_cpy.jpg}
-  \caption{DSLTrans plugins being copied to eclipse's plugins directory.}
-  \label{fig:dsltrans_plugins_cpy}
-\end{center}
-\end{figure}
+Finally, you need to install the DSLTrans editor and transformer features from the Dsltrans update site.
+For this you need to download and extract the DSLTransUpdateSite from the \emph{DSLTrans-Release} folder in our repository and install the features to eclipse using that update site.
 
 \clearpage
 
