--- a/DSLTransManual/installation.tex
+++ b/DSLTransManual/installation.tex
@@ -1,12 +1,12 @@
 ﻿\section{Installation}
 \label{sec:installation}
 
-\subsection{Windows}
+\subsection{Windows (32 and 64 bits}
 
 In order to successfully follow the examples in this manual and use
-\emph{DSLTrans} you have to follow (carefully) these steps:
+\emph{DSLTrans} you have to follow these steps carefully:
 
-Download and install SWI-Prolog version 5.10.2. You will find it inside the \emph{DSLTrans-Release} folder in our repository:
+Download and install SWI-Prolog version 5.10 or newer. You will find it inside the \emph{DSLTrans-Release} folder in our repository:
 \url{https://github.com/githubbrunob/DSLTransGIT}
 
 Download and extract Eclipse Modeling Tools, Luna Service Release 1.
