Extra ( in the installation section

--- a/DSLTransManual/installation.tex
+++ b/DSLTransManual/installation.tex
@@ -1,7 +1,7 @@
 ﻿\section{Installation}
 \label{sec:installation}
 
-\subsection{Windows (32 and 64 bits}
+\subsection{Windows (32 and 64 bits)}
 
 In order to successfully follow the examples in this manual and use
 \emph{DSLTrans} you have to follow these steps carefully:
