added instruction to restart the pc

--- a/DSLTransManual/installation.tex
+++ b/DSLTransManual/installation.tex
@@ -64,6 +64,8 @@ directory, and paste it in Java's lib directory:
 Finally, you need to install the DSLTrans editor and transformer features from the Dsltrans update site.
 For this you need to download and extract the DSLTransUpdateSite from the \emph{DSLTrans-Release} folder in our repository and install the features to eclipse using that update site.
 
+Afterwards, restart the pc.
+
 \clearpage
 
 
