update manual to remove SWI prolog related installation instructions

--- a/DSLTransManual/faq.tex
+++ b/DSLTransManual/faq.tex
@@ -25,7 +25,11 @@ Erro de inicializacao de prolog e isso
 
 \subsection{SWI-Prolog: [FATAL Error: Could not find system resources]}
 
-This error occurs when you one (or more) of the following steps in the section \ref{sec:installation}:
+\emph{This error no longer occurs in the most recent version of DSLTrans.
+Proceed only if you have an older version.
+}
+
+It occurs when you one (or more) of the following steps in the section \ref{sec:installation}:
 \begin{itemize}
 \item Install swi prolog.
 \item Add the bin directory of prolog to the \emph{Path} variable.
@@ -34,6 +38,11 @@ This error occurs when you one (or more) of the following steps in the section \
 \end{itemize}
 
 \subsection{UnsatisfiedLinkError: no jpl in java.library.path}
+
+
+\emph{This error no longer occurs in the most recent version of DSLTrans.
+Proceed only if you have an older version.
+}
 
 This error can be caused by many things. One of then is an incorrect \emph{PATH} \textbf{system} environment variable.
 Make sure you have the following two items in your \textbf{system} \emph{PATH}:
@@ -49,6 +58,11 @@ You need to restart your computer after updating the environment variable.
 If this does not solve your problem, review the installation steps in the section \ref{sec:installation}.
 
 \subsection{Prolog fatal error: EXCEPTION\_ACCESS\_VIOLATION}
+
+
+\emph{This error no longer occurs in the most recent version of DSLTrans.
+Proceed only if you have an older version.
+}
 
 We had this problem with the SWI-Prolog version 5.10.2 64 bits running with Java 1.7.
 To solve this, you may either uninstall Java 1.7 and install java 1.6; 
