--- a/DSLTransManual/document.tex
+++ b/DSLTransManual/document.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper, 12pt, twoside]{article}
+\documentclass[a4paper, 12pt]{article}
 
 % Fontes vectoriais
 \usepackage[T1]{fontenc}
