dsltrans update site issues fixed.

--- a/DSLTransEditor2.0.diagram/messages.properties
+++ b/DSLTransEditor2.0.diagram/messages.properties
@@ -205,3 +205,27 @@ AbstractParser_UnknownLiteral=Unknown literal: {0}
 MessageFormatParser_InvalidInputError=Invalid input at {0}
 DsltransModelingAssistantProviderTitle=Select domain model element
 DsltransModelingAssistantProviderMessage=Available domain model elements:
+NavigatorGroupName_MatchMayBeSameRelation_4005_target=target
+NavigatorGroupName_MatchMayBeSameRelation_4005_source=source
+NavigatorGroupName_ApplyMayBeSameRelation_4006_target=target
+NavigatorGroupName_ApplyMayBeSameRelation_4006_source=source
+NavigatorGroupName_ApplyAssociation_4007_target=target
+NavigatorGroupName_ApplyAssociation_4007_source=source
+NavigatorGroupName_PositiveBackwardRestriction_4008_target=target
+NavigatorGroupName_PositiveBackwardRestriction_4008_source=source
+NavigatorGroupName_NegativeBackwardRestriction_4009_target=target
+NavigatorGroupName_NegativeBackwardRestriction_4009_source=source
+NavigatorGroupName_AttributeEquality_4010_target=target
+NavigatorGroupName_AttributeEquality_4010_source=source
+NavigatorGroupName_AttributeInequality_4011_target=target
+NavigatorGroupName_AttributeInequality_4011_source=source
+NavigatorGroupName_Import_4012_target=target
+NavigatorGroupName_Import_4012_source=source
+NavigatorGroupName_LayerPreviousSource_4013_target=target
+NavigatorGroupName_LayerPreviousSource_4013_source=source
+NavigatorGroupName_MatchModelExplicitSource_4014_target=target
+NavigatorGroupName_MatchModelExplicitSource_4014_source=source
+NavigatorGroupName_AttributeRefAttributeRef_4015_target=target
+NavigatorGroupName_AttributeRefAttributeRef_4015_source=source
+NavigatorGroupName_ClassRefClassRef_4016_target=target
+NavigatorGroupName_ClassRefClassRef_4016_source=source
